--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/SocketDemo
+spring.datasource.username=postgres
+spring.datasource.password=myPassword
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+spring.data.mongodb.uri=mongodb://localhost:27017/Chat
